# CSTM

./: .gitignore  CMakeLists.txt  README.md
CSTM/: Assert.hpp  CMakeLists.txt  CodePointIterator.cpp  CodePointIterator.hpp  Concepts.hpp  EnumFlags.hpp  EnumUtils.hpp  File.cpp  File.hpp  FunctionRef.hpp  Hash.hpp  HashMap.hpp  Nullable.hpp  Path.hpp  Result.hpp  Scoped.hpp  Span.hpp  StateMachine.hpp  String.cpp  String.hpp  StringBase.hpp  StringView.cpp  StringView.hpp  Tuple.hpp  Types.hpp  Unicode.hpp  Utf8String.cpp  Utf8String.hpp  Utility.hpp
Tests/: CMakeLists.txt  CompileAll.cpp  Concepts.cpp  FunctionRef.cpp  HashMap.cpp  Main.cpp  Result.cpp  String.cpp  StringView.cpp  Test.hpp  Utf8String.cpp
